# sentinel

./: .gitignore  .gitmodules  2FA_FIX_IMPLEMENTATION.md  2FA_QUICK_FIXES.md  2FA_REVIEW.md  2FA_SECURITY_REVIEW.md  ARCHITECTURE.md  BUFFER_SECURITY_AUDIT.md  CAMERA_GRID_IMPLEMENTATION.md  CAMERA_IMPLEMENTATION_COMPLETE.md  CAMERA_IMPLEMENTATION_GUIDE.md  CAMERA_LIVE_VIEW_FEATURE.md  CAMERA_LIVE_VIEW_IMPLEMENTATION.md  CAMERA_PHASE2_MJPEG_STREAMING.md  CAMERA_PHASE3_SD_MANAGEMENT.md  CAMERA_QUICK_START.md  CAMERA_STATUS.md  CERTIFICATE_RENEWAL_ANALYSIS.md  CERT_SCALE_SOLUTION.md  CHANGELOG.md  CMakeLists.txt  COMMERCIAL_READINESS.md  CONFIG.md  CRUD_IMPLEMENTATION.md  DEVICE_INTEGRATION_GUIDE.md  DISPLAY_USAGE.md  DOCUMENTATION.md  ESPHOME_DEVICE_SETUP.md  ESPHOME_MATTER_INTEGRATION_GUIDE.md  FEATURE_ROADMAP.md  HTTPS_CHECKLIST.md  HTTPS_IMPLEMENTATION_COMPLETE.md  HTTPS_IMPLEMENTATION_REVIEW.md  HTTPS_QUICK_START.md  HTTPS_RECOMMENDATION.md  HTTPS_SETUP.md  IMPROVEMENTS.md  INDEX.md  INSTALLER_USER_IMPLEMENTATION.md  MAINTENANCE.md  (+38 more)
.github/: ed25519-randombytes-custom.h  noise-c-CMakeLists.txt
.github/workflows/: build.yml
components/camera/: CMakeLists.txt  camera_mgr.c  camera_mgr.h  camera_zones.c  camera_zones.h
components/comms/: CMakeLists.txt  dispatcher.c  dispatcher.h  ha_mqtt.c  net.c  net.h  noonlight.c  payload_manager.c  payload_manager.h  smtp.c  smtp.h  telegram.c  telegram.h
components/engine/: CMakeLists.txt  dispatcher.c  dispatcher.h  engine.c  engine.h  ha_mqtt.c  ha_mqtt.h  hardware_config.h  logging.c  logging.h  monitor.c  monitor.h  net.c  net.h  noonlight.c  noonlight.h  otp.c  otp.h  payload_manager.c  payload_manager.h  smtp.h  system_monitoring.c  system_monitoring.h  telegram.c  telegram.h  user_mgr.c  user_mgr.h
components/esphome_api/: CMakeLists.txt  esphome_api_client.c  esphome_api_client.h  esphome_api_protocol.c  esphome_api_protocol.h  esphome_api_server.c  esphome_api_server.h  esphome_zones.c  esphome_zones.h
components/hardware/: CMakeLists.txt  hal.h  (+4 more)
components/matter_controller/: CMakeLists.txt  matter_clusters.c  matter_commissioning.c  matter_controller.c  matter_controller.h  matter_controller_stub.c  matter_relays.c  matter_storage.c  matter_zones.c
components/mongoose/: CMakeLists.txt  mongoose.c  mongoose.h
data/: cameras.html  cameras.json  cameras_live.html  config.json  devices.html  index.html  users.html  users.json  zstatus.html
generated_proto/: api.pb.c  api.pb.h  api_options.pb.h
hold/: Makefile.native  Phase 1_ Install the AdGuard Home Plugin.md  diagnostics.html  dscindex.html  dsckeypad.html  esphome.json.example  indexdsc.html  indexold.html  maintenance.html  testerold.html  tuya.json.example
hold/zigbee_archive/components/zigbee/: CMakeLists.txt  zigbee_automations.h  zigbee_devices.c  zigbee_groups.h  zigbee_mgr.c  zigbee_mgr.h  zigbee_protocol.c  zigbee_relays.h  zigbee_zones.c
main/: CMakeLists.txt  hal.h  hal_esp32.c  hal_esp32.h  idf_component.yml  main.c  partitions.csv  rf_driver.c  rf_driver.h  server_cert.c  server_cert.h
scripts/: generate_10_year_cert.sh  generate_long_cert.sh  prepare_spiffs.sh
test_linux/: CHECKLIST.md  CODE_REVIEW.md  ESPHOME_TEST_GUIDE.md  MATTER_TEST_GUIDE.md  Makefile  PRODUCT_OVERVIEW.md  README.md  WINDOWS_PORT_GUIDE.md  camera_mock.c  check_dates.sh  entity_discovery_test.c  esphome_mock.c  main_mock.c  matter_controller.h  matter_mock.c  mock_esphome_server.c  mongoose.c  run_all.sh  simple_https_server.py  test.md  test_complete.sh  test_complete_esphome  test_complete_esphome.c  test_encrypted  test_encrypted_connection.c  test_encrypted_connection_fixed.c  test_encryption_detection  test_encryption_detection.c  test_esphome_basic.c  test_esphome_client.c  test_esphome_real.c  test_matter.sh  test_plain  test_plain_switch.c  test_protobuf_encoding  test_protobuf_encoding.c  test_relay_toggle  test_relay_toggle.c  test_simple_esphome  test_simple_esphome.c  (+8 more)
(+78 files in other folders)
